--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,14 @@
+html, body {
+  width:  100%;
+  height: 100%;
+  margin: 0px;
+}
+
 body{
 	background:#003366;
 	font-family: helvetica, arial;
 	font-size: 14px;
 	height: 100vh;
-	width: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
